feat: Complete Phase 4 - Workloads, Reporting, and CLI Integration
Implements full benchmark execution framework:

Core Components:
- WorkloadConfig with builder pattern and validation
- DocumentGenerator for configurable test documents
- TraverseWorkload and DeserializeWorkload implementations
- BenchmarkExecutor with warmup phases and metrics collection

Report Generators:
- ConsoleReportGenerator with formatted tables
- JsonReportGenerator for machine-readable output
- CsvReportGenerator for spreadsheet analysis
- HtmlReportGenerator for web-viewable reports

CLI Integration:
- WorkloadRegistry and AdapterRegistry for plugin discovery
- RunCommand with full benchmark orchestration
- ListCommand showing available resources
- Support for dry-run validation

Benchmark Results (BSON vs OSON):
- OSON 1.57x faster overall for field projections
- 12 of 14 tests favor OSON O(1) hash-indexed access
- Full document reads slightly favor BSON (0.94-0.95x)

Test Coverage: 238 unit tests + 48 integration tests

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>